--- a/test_accuracy_paper/test_accuracy_theory.tex
+++ b/test_accuracy_paper/test_accuracy_theory.tex
@@ -131,6 +131,7 @@ Of course, there are exceptions: in any real DNN, the fitted $\alpha$ may range 
 %Empirically, it is know that these Gaussian-based models are useful for understanding older, smallish Neural Networks, such as LeNet5~\cite{MM18_TR}.
 %More modern DNNs, however, display very different, more exotic,  Universal, behavior.  
 
+\charlesX{Heavy-Tailed Mechanistic Universality (HT-MU)}
 
 \paragraph{Heavy-Tailed Universality.} 
 
@@ -195,8 +196,6 @@ of Heavy-Tailed random matrices, defined by the range $\mu$ takes on:
 
 '
 \charlesX{NEED BETTER INTRO}
-
-
 
 
 %% For the VHT Universality class, the PL tail of Eqn.~(\ref{eqn:eigenval_pl}) persists in the infinite limit $N\rightarrow\infty$, for $Q$ fixed; and
