--- a/test_accuracy_paper/test_accuracy.tex
+++ b/test_accuracy_paper/test_accuracy.tex
@@ -91,6 +91,7 @@
 
 % Here are two macros for comments.
 \newcommand {\nred}[1]{{\color{red}\sf{[#1]}}}
+\newcommand {\ngreen}[1]{{\color{darkgreen}\sf{[#1]}}}
 \newcommand {\michael}[1]{{\color{red}\sf{[michael: #1]}}}
 \newcommand {\charles}[1]{{\color{blue}\sf{[charles: #1]}}}
 \newcommand {\charlesX}[1]{{\color{violet}\sf{[charlesG: #1]}}}
